# nlp-service

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app_state.rs  config.rs  llm.rs  main.rs
src/routes/: generate.rs  mod.rs  tokenize.rs
