[package]
name = "nlp-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
serde = "1.0.219"
serde_json = "1.0.143"
tokenizers = "0.21.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
cc = "=1.0.83"
llama_cpp_rs = "0.3.0"
